config/base/derive/tests/ui_fail/invalid_attrs_conflicts.stderr
error: attributes conflict: `nested` cannot be set with other attributes
 --> tests/ui_fail/invalid_attrs_conflicts.rs:5:22
  |
5 |     #[config(nested, env_custom)]
  |                      ^^^^^^^^^^

error: attributes conflict: `nested` cannot be set with other attributes
  --> tests/ui_fail/invalid_attrs_conflicts.rs:11:23
   |
11 |     #[config(default, nested)]
   |                       ^^^^^^

error: attributes conflict: set either `env` or `env_custom`, not both
  --> tests/ui_fail/invalid_attrs_conflicts.rs:17:29
   |
17 |     #[config(env = "FASDF", env_custom)]
   |                             ^^^^^^^^^^
